fix ul ol li spacing

--- a/src/style.css
+++ b/src/style.css
@@ -210,7 +210,7 @@ ol {
   padding: var(--spacing-0);
   margin-bottom: var(--spacing-8);
   list-style-image: none;
-  list-style-position: inside;
+  /* list-style-position: inside; */
   line-height: var(--lineHeight-relaxed);
 }
 
@@ -218,6 +218,7 @@ ul li,
 ol li {
   padding-left: var(--spacing-0);
   margin-bottom: calc(var(--spacing-8) / 2);
+  margin-left: var(--spacing-8);
 }
 
 li > p {
@@ -374,10 +375,10 @@ a:focus {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
     margin-left: var(--spacing-0);
   }
-  ul,
+  /* ul,
   ol {
     list-style-position: inside;
-  }
+  } */
   img {
     max-width: 100%;
   }
